Kubernetes/AZ_AKS_LAB/kurumsal-altyapi_network_Policy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics-server
  namespace: kube-system
  labels:
    k8s-app: metrics-server
spec:
  selector:
    matchLabels:
      k8s-app: metrics-server
  template:
    metadata:
      labels:
        k8s-app: metrics-server
    spec:
      containers:
      - name: metrics-server
        image: registry.k8s.io/metrics-server/metrics-server:v0.6.4
        args:
        - --cert-dir=/tmp
        - --secure-port=4443
        - --kubelet-insecure-tls
        - --kubelet-preferred-address-types=InternalIP,ExternalIP,Hostname
        resources:
          requests:
            cpu: 50m       # CPU talebini düşürdük
            memory: 50Mi   # RAM talebini 50 MB'a çektik
          limits:
            cpu: 100m
            memory: 104Mi  # Sandbox'ın izin verdiği maksimum sınıra tam uyum sağladık!
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: muhasebe-web-deployment
  namespace: default
  labels:
    app: muhasebe-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: muhasebe-web
  template:
    metadata:
      labels:
        app: muhasebe-web
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: web-container
        image: mcr.microsoft.com/azuredocs/aci-helloworld:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "250m"
            memory: "64Mi"
          limits:
            cpu: "500m"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: muhasebe-web-service
  namespace: default
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: muhasebe-web
---
# 6. BÖLÜM: Muhasebe Uygulaması Firewall (Network Policy) Kuralı
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: muhasebe-firewall
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: muhasebe-web # Bu kural sadece muhasebe-web podunu koruyacak
  policyTypes:
  - Ingress # Gelen trafiği denetle
  ingress:
  # İçeriyi tamamen kapatıyoruz. Sadece dış dünyadan (LoadBalancer/Ingress) gelen 
  # ve uygulamanın çalıştığı 80 portuna olan isteklere izin veriyoruz:
  - ports:
    - protocol: TCP
      port: 80
